--- a/Notes.Application/Notes.Application.csproj
+++ b/Notes.Application/Notes.Application.csproj
@@ -17,4 +17,14 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0-preview.2.25163.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Features\Files\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore.Http.Features">
+        <HintPath>..\..\..\.dotnet\shared\Microsoft.AspNetCore.App\9.0.0\Microsoft.AspNetCore.Http.Features.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
