--- a/Notes.Persistance/Notes.Persistance.csproj
+++ b/Notes.Persistance/Notes.Persistance.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.2.25163.2" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0-preview.2.25163.2" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="10.0.0-preview.2.25163.2" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.0-preview.2.25163.2" />
       <PackageReference Include="MongoDB.Driver" Version="3.3.0" />
     </ItemGroup>
 
