--- a/Notes.WebApi/appsettings.json
+++ b/Notes.WebApi/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Keycloak": {
+    "Authority": "http://localhost:8080",
+    "ClientId": "notes-client",
+    "ClientSecret": "YryP808OTWOXTTXAtA0XyqiUUsvFrVJ3",
+    "Realm": "notes-realm"
+  },
+  "Minio": {
+    "Endpoint": "localhost:9000",
+    "AccessKey": "minioadmin",
+    "SecretKey": "minioadmin",
+    "BucketName": "notes"
+  }
 }
