Добавлены keycloak и сценарий импорта заметки на фронте.

--- a/src/back/Notes.WebApi/appsettings.json
+++ b/src/back/Notes.WebApi/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "Keycloak": {
     "Authority": "http://localhost:8080",
+    "Audience": "account",
     "ClientId": "notes-client",
     "ClientSecret": "YryP808OTWOXTTXAtA0XyqiUUsvFrVJ3",
     "Realm": "notes-realm"
